--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ body {
     font-family: sans-serif;
     background: #000;
 }
+
 .wrapper {
     display: flex;
     overflow-x: hidden;
@@ -63,6 +64,7 @@ body {
     height: 100vh;
     justify-content: space-between;
 }
+
 .container {
     max-width: 1280px;
     margin: 0 auto;
@@ -71,4 +73,48 @@ body {
 input[type="search"]::-webkit-search-cancel-button {
     -webkit-appearance: none;
     appearance: none;
+}
+
+.yellow-title::before {
+    background: #f5c518;
+    border-radius: 5px;
+    content: "";
+    align-self: flex-start;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 4px;
+}
+
+.prime-video::before {
+    position: absolute;
+    width: 100%;
+    content: "";
+    height: 2px;
+    background-color: rgb(0, 157, 255);
+    bottom: 0;
+    left: 0;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    top: 40% !important;
+    border: 1px solid #fff;
+    background: #12121273 !important;
+    padding: 15px 0;
+    width: 60px !important;
+    height: 60px !important;
+    color: #fff !important;
+    border-radius: 5px;
+    transition: all .2s linear;
+}
+
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
+    color: #F6C700 !important;
+}
+
+.swiper-button-disabled {
+    display: none !important;
 }
